Fix user type selection functionality and link spectacle cards
- Fixed JavaScript syntax error in spectacles.html (missing closing brace)
- Removed 'Populaire' badge from École card in user type selection
- Updated all spectacle card links to point to individual spectacle pages
- Added .html extensions to all spectacle links for local server compatibility
- Updated both home page carousel and spectacles page cards
- Ensured proper navigation from overview to detailed spectacle pages

--- a/index.html
+++ b/index.html
@@ -2433,8 +2433,8 @@
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.25s">
                 <div class="vs-class">
                   <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacles.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Casse-Noisette" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
+                    <a class="vs-class__figure--link" href="spectacle-charlotte.html">
+                      <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color1">
                         <img src="assets/img/icon L'École des jeunes spectateurs-11.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
@@ -2443,7 +2443,7 @@
                     </a>
                   </div>
                   <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacles.html">
+                    <a class="vs-class__heading--link" href="spectacle-charlotte.html">
                       <h3 class="vs-class__heading">Charlotte</h3>
                     </a>
                     <p class="vs-class__text">
@@ -2460,7 +2460,7 @@
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.45s">
                 <div class="vs-class">
                   <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacles.html">
+                    <a class="vs-class__figure--link" href="spectacle-le-petit-prince.html">
                       <img class="vs-class__figure--img" src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color2">
@@ -2470,7 +2470,7 @@
                     </a>
                   </div>
                   <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacles.html">
+                    <a class="vs-class__heading--link" href="spectacle-le-petit-prince.html">
                       <h3 class="vs-class__heading">Le Petit Prince</h3>
                     </a>
                     <p class="vs-class__text">
@@ -2478,7 +2478,7 @@
                     </p>
                   </div>
                   <div class="vs-class__bottom">
-                    <a href="spectacles.html" class="vs-class__link">
+                    <a href="spectacle-le-petit-prince.html" class="vs-class__link">
                       <i class="fa-solid fa-arrow-right"></i>
                     </a>
                   </div>
@@ -2487,7 +2487,7 @@
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.65s">
                 <div class="vs-class">
                   <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacles.html">
+                    <a class="vs-class__figure--link" href="spectacle-tara-sur-la-lune.html">
                       <img class="vs-class__figure--img" src="assets/img/spectacles/tara sur la lune.png" alt="Tara Sur La Lune" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color3">
@@ -2497,7 +2497,7 @@
                     </a>
                   </div>
                   <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacles.html">
+                    <a class="vs-class__heading--link" href="spectacle-tara-sur-la-lune.html">
                       <h3 class="vs-class__heading">Tara Sur La Lune</h3>
                     </a>
                     <p class="vs-class__text">
@@ -2505,7 +2505,7 @@
                     </p>
                   </div>
                   <div class="vs-class__bottom">
-                    <a href="spectacles.html" class="vs-class__link">
+                    <a href="spectacle-tara-sur-la-lune.html" class="vs-class__link">
                       <i class="fa-solid fa-arrow-right"></i>
                     </a>
                   </div>
@@ -2514,7 +2514,7 @@
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.85s">
                 <div class="vs-class">
                   <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacles.html">
+                    <a class="vs-class__figure--link" href="spectacle-leau-la.html">
                       <img class="vs-class__figure--img" src="assets/img/spectacles/l'eau la.png" alt="L'Eau-Là" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color4">
@@ -2524,7 +2524,7 @@
                     </a>
                   </div>
                   <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacles.html">
+                    <a class="vs-class__heading--link" href="spectacle-leau-la.html">
                       <h3 class="vs-class__heading">L'Eau-Là</h3>
                     </a>
                     <p class="vs-class__text">
@@ -2532,39 +2532,10 @@
                     </p>
                   </div>
                   <div class="vs-class__bottom">
-                    <a href="spectacles.html" class="vs-class__link">
+                    <a href="spectacle-leau-la.html" class="vs-class__link">
                       <i class="fa-solid fa-arrow-right"></i>
                     </a>
                   </div>
-                </div>
-              </div>
-              <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="1.05s">
-                <div class="vs-class">
-                  <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacles.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/simple.png" alt="Simple Comme Bonjour" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                      <div class="vs-class__icon--wrap">
-                        <span class="vs-class__icon vs-class__icon--color5">
-                        <img src="assets/img/icon L'École des jeunes spectateurs-20.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                      </span>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacles.html">
-                      <h3 class="vs-class__heading">Simple Comme Bonjour</h3>
-                    </a>
-                    <p class="vs-class__text">
-                      La comédie classique de Molière revisitée pour captiver les jeunes spectateurs.
-                    </p>
-                  </div>
-                  <div class="vs-class__bottom">
-                    <a href="spectacles.html" class="vs-class__link">
-                      <i class="fa-solid fa-arrow-right"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="1.25s">
                 <div class="vs-class">
                   <div class="vs-class__figure">
