--- a/spectacles.html
+++ b/spectacles.html
@@ -819,7 +819,7 @@
   <!-- Breadcrumb End -->
 
   <!-- User Type Selection Section -->
-  <section class="user-type-selection" id="userTypeSection" style="position: relative; z-index: 100;">
+  <section class="user-type-selection" id="userTypeSection">
     <div class="container">
       <div class="selection-wrapper">
         <div class="selection-header">
@@ -829,54 +829,54 @@
         </div>
 
         <div class="user-type-grid">
-          <div class="user-type-card" data-type="school" style="cursor: pointer; position: relative; z-index: 101;">
+          <div class="user-type-card" data-type="school">
             <div class="card-header">
               <div class="card-icon">
                 <i class="fas fa-graduation-cap"></i>
               </div>
             </div>
             <div class="card-content">
-              <h3 class="card-title" style="font-size: 2rem; font-weight: 700;">École</h3>
+              <h3 class="card-title">École</h3>
               <p class="card-description">Établissements scolaires publics et privés</p>
             </div>
             <div class="card-footer">
-              <button class="card-btn" style="cursor: pointer; position: relative; z-index: 102;">
+              <button class="card-btn">
                 <span>Choisir ce profil</span>
                 <i class="fas fa-arrow-right"></i>
               </button>
             </div>
           </div>
 
-          <div class="user-type-card" data-type="association" style="cursor: pointer; position: relative; z-index: 101;">
+          <div class="user-type-card" data-type="association">
             <div class="card-header">
               <div class="card-icon">
                 <i class="fas fa-users"></i>
               </div>
             </div>
             <div class="card-content">
-              <h3 class="card-title" style="font-size: 2rem; font-weight: 700;">Association</h3>
+              <h3 class="card-title">Association</h3>
               <p class="card-description">Organisations à but non lucratif et centres culturels</p>
             </div>
             <div class="card-footer">
-              <button class="card-btn" style="cursor: pointer; position: relative; z-index: 102;">
+              <button class="card-btn">
                 <span>Choisir ce profil</span>
                 <i class="fas fa-arrow-right"></i>
               </button>
             </div>
           </div>
 
-          <div class="user-type-card" data-type="particulier" style="cursor: pointer; position: relative; z-index: 101;">
+          <div class="user-type-card" data-type="particulier">
             <div class="card-header">
               <div class="card-icon">
                 <i class="fas fa-home"></i>
               </div>
             </div>
             <div class="card-content">
-              <h3 class="card-title" style="font-size: 2rem; font-weight: 700;">Particulier</h3>
+              <h3 class="card-title">Particulier</h3>
               <p class="card-description">Familles et spectateurs individuels</p>
             </div>
             <div class="card-footer">
-              <button class="card-btn" style="cursor: pointer; position: relative; z-index: 102;">
+              <button class="card-btn">
                 <span>Choisir ce profil</span>
                 <i class="fas fa-arrow-right"></i>
               </button>
@@ -1034,10 +1034,10 @@
                 </div>
               </div>
               <div class="card-actions">
-                <a href="contact?spectacle=charlotte" class="btn-primary-custom">
+                <a href="contact.html?spectacle=charlotte" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-charlotte" class="btn-secondary-custom">
+                <a href="spectacle-charlotte.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1081,7 +1081,7 @@
                 <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-tara-sur-la-lune" class="btn-secondary-custom">
+                <a href="spectacle-tara-sur-la-lune.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1125,7 +1125,7 @@
                 <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-leau-la" class="btn-secondary-custom">
+                <a href="spectacle-leau-la.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1170,7 +1170,7 @@
                 <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-enfant-de-larbre" class="btn-secondary-custom">
+                <a href="spectacle-lenfant-de-larbre.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1214,7 +1214,7 @@
                 <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-alice" class="btn-secondary-custom">
+                <a href="spectacle-alice-chez-les-merveilles.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1259,7 +1259,7 @@
                 <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-petit-prince" class="btn-secondary-custom">
+                <a href="spectacle-le-petit-prince.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1303,7 +1303,7 @@
                 <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-simple-comme-bonjour" class="btn-secondary-custom">
+                <a href="spectacle-simple-comme-bonjour.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1347,7 +1347,7 @@
                 <a href="contact?spectacle=estuaires" class="btn-primary-custom" style="opacity: 0.7; cursor: not-allowed;">
                   <i class="fas fa-clock"></i> Pré-réserver
                 </a>
-                <a href="spectacle-estuaires" class="btn-secondary-custom">
+                <a href="spectacle-estevanico.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1392,7 +1392,7 @@
                 <a href="contact?spectacle=antigone" class="btn-primary-custom">
                   <i class="fas fa-ticket-alt"></i> Réserver
                 </a>
-                <a href="spectacle-antigone" class="btn-secondary-custom">
+                <a href="spectacle-antigone.html" class="btn-secondary-custom">
                   <i class="fas fa-info-circle"></i> Détails
                 </a>
               </div>
@@ -1955,6 +1955,7 @@
 
       document.querySelectorAll('.fade-in-up').forEach(el => {
         observer.observe(el);
+      });
     });
   </script>
 
