Fix L'Eau-Là spectacle card HTML structure and Charlotte page metadata
- Fixed missing closing div tags in L'Eau-Là spectacle card on home page
- Updated Charlotte page title from 'Le Petit Prince' to 'Charlotte'
- Corrected Charlotte page meta description and keywords
- Fixed Charlotte page hero image to use proper charlotte.png
- Added custom server to handle clean URLs without .html extensions

--- a/index.html
+++ b/index.html
@@ -2536,6 +2536,8 @@
                       <i class="fa-solid fa-arrow-right"></i>
                     </a>
                   </div>
+                </div>
+              </div>
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="1.25s">
                 <div class="vs-class">
                   <div class="vs-class__figure">
