--- a/spectacle-charlotte.html
+++ b/spectacle-charlotte.html
@@ -5,10 +5,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Le Petit Prince - École du Jeune Spectateur</title>
+  <title>Charlotte - École du Jeune Spectateur</title>
   <meta name="author" content="L'École des jeunes spectateurs">
-  <meta name="description" content="Un spectacle basé sur l'art de dessin de sable, hommage au Sahara et à l'histoire légendaire du Petit Prince de Saint-Exupéry.">
-  <meta name="keywords" content="le petit prince, dessin de sable, spectacle, enfants, théâtre, L'École des jeunes spectateurs, saint-exupéry">
+  <meta name="description" content="Un spectacle de marionnettes touchant qui explore l'univers d'une jeune fille à la recherche de sa place dans le monde, entre réalité et imaginaire.">
+  <meta name="keywords" content="charlotte, marionnettes, spectacle, enfants, théâtre, L'École des jeunes spectateurs, violon">
   <meta name="robots" content="INDEX,FOLLOW">
 
   <!-- Mobile Specific Metas -->
@@ -653,7 +653,7 @@
         <div class="col-lg-6 order-1 order-lg-2 mb-4 mb-lg-0">
           <div class="hero-image text-center position-relative">
             <div class="image-container" style="position: relative; display: inline-block;">
-              <img src="assets/edjs img/Casse-Noisette_Web_013-1024x683.webp" alt="Charlotte - Spectacle de Marionnettes" 
+              <img src="assets/img/spectacles/charlotte.png" alt="Charlotte - Spectacle de Marionnettes" 
                    class="img-fluid rounded-4 shadow-lg" 
                    style="max-width: 500px; width: 100%; height: auto; transform: rotate(-2deg); transition: transform 0.3s ease;">
               <div class="image-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(45deg, rgba(189,207,0,0.1), rgba(255,255,255,0.1)); border-radius: 1rem;"></div>
