--- a/index.html
+++ b/index.html
@@ -2428,112 +2428,82 @@
           </div>
         </div>
         <div class="z-index-common" style="position: relative; z-index: 2;">
+          <style>
+            .spectacle-card:hover {
+              transform: translateY(-5px);
+              box-shadow: 0 15px 40px rgba(0,0,0,0.15) !important;
+            }
+            .spectacle-card a:hover {
+              background: #a8b800 !important;
+              transform: translateX(3px);
+            }
+          </style>
           <div class="vs-carousel vs-carousel--class swiper" data-xl="4" data-lg="3" data-autoplay="false" data-loop="true" data-autoplay-delay="6000" data-nav-next="#swiper-button-next" data-nav-prev="#swiper-button-prev">
             <div class="swiper-wrapper">
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.25s">
-                <div class="vs-class">
-                  <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacle-charlotte.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                      <div class="vs-class__icon--wrap">
-                        <span class="vs-class__icon vs-class__icon--color1">
-                        <img src="assets/img/icon L'École des jeunes spectateurs-11.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                      </span>
-                      </div>
-                    </a>
+                <div class="spectacle-card" style="background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 8px 30px rgba(0,0,0,0.1); transition: all 0.3s ease; height: 100%;">
+                  <div class="card-image" style="position: relative; height: 200px; overflow: hidden;">
+                    <img src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="card-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(45deg, rgba(189,207,0,0.8), rgba(189,207,0,0.6));"></div>
+                    <div class="card-badge" style="position: absolute; top: 15px; right: 15px; background: white; padding: 8px 12px; border-radius: 20px; font-size: 12px; font-weight: 600; color: #BDCF00;">Marionnettes</div>
                   </div>
-                  <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacle-charlotte.html">
-                      <h3 class="vs-class__heading">Charlotte</h3>
-                    </a>
-                    <p class="vs-class__text">
-                      Un spectacle émouvant qui explore les thèmes de l'amitié et de la découverte de soi.
-                    </p>
-                  </div>
-                  <div class="vs-class__bottom">
-                    <a href="spectacles.html" class="vs-class__link">
-                      <i class="fa-solid fa-arrow-right"></i>
+                  <div class="card-content" style="padding: 25px;">
+                    <h3 style="font-size: 1.4rem; font-weight: 700; color: #2c3e50; margin-bottom: 10px; font-family: 'Raleway', sans-serif;">Charlotte</h3>
+                    <p style="color: #6c757d; line-height: 1.6; margin-bottom: 20px; font-size: 0.95rem;">Un spectacle émouvant qui explore les thèmes de l'amitié et de la découverte de soi.</p>
+                    <a href="spectacle-charlotte.html" style="display: inline-flex; align-items: center; gap: 8px; background: #BDCF00; color: white; padding: 12px 20px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem; transition: all 0.3s ease;">
+                      <span>Découvrir</span>
+                      <i class="fas fa-arrow-right"></i>
                     </a>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.45s">
-                <div class="vs-class">
-                  <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacle-le-petit-prince.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                      <div class="vs-class__icon--wrap">
-                        <span class="vs-class__icon vs-class__icon--color2">
-                        <img src="assets/img/icon L'École des jeunes spectateurs-12.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                      </span>
-                      </div>
-                    </a>
+                <div class="spectacle-card" style="background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 8px 30px rgba(0,0,0,0.1); transition: all 0.3s ease; height: 100%;">
+                  <div class="card-image" style="position: relative; height: 200px; overflow: hidden;">
+                    <img src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="card-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(45deg, rgba(189,207,0,0.8), rgba(189,207,0,0.6));"></div>
+                    <div class="card-badge" style="position: absolute; top: 15px; right: 15px; background: white; padding: 8px 12px; border-radius: 20px; font-size: 12px; font-weight: 600; color: #BDCF00;">Dessin de Sable</div>
                   </div>
-                  <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacle-le-petit-prince.html">
-                      <h3 class="vs-class__heading">Le Petit Prince</h3>
-                    </a>
-                    <p class="vs-class__text">
-                      L'histoire touchante du Petit Prince adaptée pour émerveiller petits et grands.
-                    </p>
-                  </div>
-                  <div class="vs-class__bottom">
-                    <a href="spectacle-le-petit-prince.html" class="vs-class__link">
-                      <i class="fa-solid fa-arrow-right"></i>
+                  <div class="card-content" style="padding: 25px;">
+                    <h3 style="font-size: 1.4rem; font-weight: 700; color: #2c3e50; margin-bottom: 10px; font-family: 'Raleway', sans-serif;">Le Petit Prince</h3>
+                    <p style="color: #6c757d; line-height: 1.6; margin-bottom: 20px; font-size: 0.95rem;">L'histoire touchante du Petit Prince adaptée pour émerveiller petits et grands.</p>
+                    <a href="spectacle-le-petit-prince.html" style="display: inline-flex; align-items: center; gap: 8px; background: #BDCF00; color: white; padding: 12px 20px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem; transition: all 0.3s ease;">
+                      <span>Découvrir</span>
+                      <i class="fas fa-arrow-right"></i>
                     </a>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.65s">
-                <div class="vs-class">
-                  <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacle-tara-sur-la-lune.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/tara sur la lune.png" alt="Tara Sur La Lune" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                      <div class="vs-class__icon--wrap">
-                        <span class="vs-class__icon vs-class__icon--color3">
-                        <img src="assets/img/icon L'École des jeunes spectateurs-18.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                      </span>
-                      </div>
-                    </a>
+                <div class="spectacle-card" style="background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 8px 30px rgba(0,0,0,0.1); transition: all 0.3s ease; height: 100%;">
+                  <div class="card-image" style="position: relative; height: 200px; overflow: hidden;">
+                    <img src="assets/img/spectacles/tara sur la lune.png" alt="Tara Sur La Lune" style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="card-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(45deg, rgba(189,207,0,0.8), rgba(189,207,0,0.6));"></div>
+                    <div class="card-badge" style="position: absolute; top: 15px; right: 15px; background: white; padding: 8px 12px; border-radius: 20px; font-size: 12px; font-weight: 600; color: #BDCF00;">Aventure Spatiale</div>
                   </div>
-                  <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacle-tara-sur-la-lune.html">
-                      <h3 class="vs-class__heading">Tara Sur La Lune</h3>
-                    </a>
-                    <p class="vs-class__text">
-                      Une aventure spatiale captivante qui stimule l'imagination et la curiosité des enfants.
-                    </p>
-                  </div>
-                  <div class="vs-class__bottom">
-                    <a href="spectacle-tara-sur-la-lune.html" class="vs-class__link">
-                      <i class="fa-solid fa-arrow-right"></i>
+                  <div class="card-content" style="padding: 25px;">
+                    <h3 style="font-size: 1.4rem; font-weight: 700; color: #2c3e50; margin-bottom: 10px; font-family: 'Raleway', sans-serif;">Tara Sur La Lune</h3>
+                    <p style="color: #6c757d; line-height: 1.6; margin-bottom: 20px; font-size: 0.95rem;">Une aventure spatiale captivante qui stimule l'imagination et la curiosité des enfants.</p>
+                    <a href="spectacle-tara-sur-la-lune.html" style="display: inline-flex; align-items: center; gap: 8px; background: #BDCF00; color: white; padding: 12px 20px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem; transition: all 0.3s ease;">
+                      <span>Découvrir</span>
+                      <i class="fas fa-arrow-right"></i>
                     </a>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.85s">
-                <div class="vs-class">
-                  <div class="vs-class__figure">
-                    <a class="vs-class__figure--link" href="spectacle-leau-la.html">
-                      <img class="vs-class__figure--img" src="assets/img/spectacles/l'eau la.png" alt="L'Eau-Là" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                      <div class="vs-class__icon--wrap">
-                        <span class="vs-class__icon vs-class__icon--color4">
-                        <img src="assets/img/icon L'École des jeunes spectateurs-19.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                      </span>
-                      </div>
-                    </a>
+                <div class="spectacle-card" style="background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 8px 30px rgba(0,0,0,0.1); transition: all 0.3s ease; height: 100%;">
+                  <div class="card-image" style="position: relative; height: 200px; overflow: hidden;">
+                    <img src="assets/img/spectacles/l'eau la.png" alt="L'Eau-Là" style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="card-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(45deg, rgba(189,207,0,0.8), rgba(189,207,0,0.6));"></div>
+                    <div class="card-badge" style="position: absolute; top: 15px; right: 15px; background: white; padding: 8px 12px; border-radius: 20px; font-size: 12px; font-weight: 600; color: #BDCF00;">Poétique</div>
                   </div>
-                  <div class="vs-class__content">
-                    <a class="vs-class__heading--link" href="spectacle-leau-la.html">
-                      <h3 class="vs-class__heading">L'Eau-Là</h3>
-                    </a>
-                    <p class="vs-class__text">
-                      Une aventure aquatique qui sensibilise les enfants à l'importance de l'eau et de l'environnement.
-                    </p>
-                  </div>
-                  <div class="vs-class__bottom">
-                    <a href="spectacle-leau-la.html" class="vs-class__link">
-                      <i class="fa-solid fa-arrow-right"></i>
+                  <div class="card-content" style="padding: 25px;">
+                    <h3 style="font-size: 1.4rem; font-weight: 700; color: #2c3e50; margin-bottom: 10px; font-family: 'Raleway', sans-serif;">L'Eau-Là</h3>
+                    <p style="color: #6c757d; line-height: 1.6; margin-bottom: 20px; font-size: 0.95rem;">Une aventure aquatique qui sensibilise les enfants à l'importance de l'eau et de l'environnement.</p>
+                    <a href="spectacle-leau-la.html" style="display: inline-flex; align-items: center; gap: 8px; background: #BDCF00; color: white; padding: 12px 20px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem; transition: all 0.3s ease;">
+                      <span>Découvrir</span>
+                      <i class="fas fa-arrow-right"></i>
                     </a>
                   </div>
                 </div>
