feat: Enhanced home page rocket image and restructured spectacles page
- Enlarged rocket image to scale 12.0 for better prominence on home page
- Removed overly green background from reservation section, replaced with Asset 9@4x.png
- Changed reservation section text color from white to black for better readability
- Removed spectacles carousel section from spectacles page
- Moved reservation section to be first after breadcrumb on spectacles page
- Updated hero slider preload images to prioritize Tara Sur La Lune images

--- a/spectacles.html
+++ b/spectacles.html
@@ -818,6 +818,212 @@
   </div>
   <!-- Breadcrumb End -->
 
+  <!-- Vs Session Time Area -->
+  <section class="vs-session--area space space-extra-bottom z-index-common overflow-hidden" style="background-color: #f8f9fa; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="vs-session--bg-image" data-vs-gsap-parallax-speed="5" data-vs-gsap-parallax-zoom style="display: none;">
+      <img src="assets/img/Tara_Sur_La_Lune_Web_020.jpg" alt="Tara Sur La Lune">
+    </div>
+    <div class="vs-session--ele1" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
+      <img src="assets/img/session/session-ele-1.png" alt="session ele">
+    </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-7 wow animate__fadeInUp" data-wow-delay="0.15s">
+          <div class="vs-title text-center title-anime animation-style2">
+            <div class="title-anime__wrap">
+              <span class="vs-title__sub text-dark">Prochaines Séances</span>
+              <h2 class="vs-title__main text-dark px-xl-5">Réservez Vos Places
+                Maintenant</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-10">
+          <div class="row gx-30">
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="0.2s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      OCT
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      10:00 AM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">Le Petit Prince</h3>
+                  <p class="vs-session__text">du 3 au 7 à Rabat | du 8 au 11 à Casablanca</p>
+                  <a href="spectacle-le-petit-prince.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="0.4s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      NOV
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      2:00 PM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">L'eau-là</h3>
+                  <p class="vs-session__text">du 7 au 11 à Rabat | du 12 au 15 à Casablanca</p>
+                  <a href="spectacle-leau-la.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="0.6s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      DEC
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      3:00 PM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">Simple Comme Bonjour !</h3>
+                  <p class="vs-session__text">du 12 au 16 à Rabat | du 17 au 20 à Casablanca</p>
+                  <a href="spectacle-simple-comme-bonjour.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="0.8s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      JAN
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      11:00 AM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">Charlotte</h3>
+                  <p class="vs-session__text">du 23 au 27 à Rabat | du 28 au 31 à Casablanca</p>
+                  <a href="spectacle-charlotte.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="1.0s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      FEV
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      4:00 PM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">Estevanico</h3>
+                  <p class="vs-session__text">du 13 au 17 à Rabat | du 18 au 21 à Casablanca</p>
+                  <a href="spectacle-estevanico.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="1.2s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      MAR
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      1:00 PM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">L'enfant de l'arbre</h3>
+                  <p class="vs-session__text">du 27 au 31 à Rabat | du 1 au 4 avril à Casablanca</p>
+                  <a href="spectacle-lenfant-de-larbre.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="1.4s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      AVR
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      3:30 PM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">Antigone</h3>
+                  <p class="vs-session__text">du 15 au 19 à Rabat | du 20 au 23 à Casablanca</p>
+                  <a href="spectacle-antigone.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 wow animate__fadeInUp" data-wow-delay="1.6s">
+              <div class="vs-session">
+                <img class="vs-session__bg" src="assets/img/elements/session-main-block.png" alt="">
+                <div class="vs-session__content">
+                  <div class="vs-session__meta">
+                    <span class="vs-session__date">
+                      <i class="fa-solid fa-calendar-days"></i>
+                      MAI
+                    </span>
+                    <span class="vs-session__time">
+                      <i class="fa-solid fa-clock"></i>
+                      10:30 AM
+                    </span>
+                  </div>
+                  <h3 class="vs-session__title">Alice chez les merveilles</h3>
+                  <p class="vs-session__text">du 5 au 9 à Rabat | du 10 au 13 à Casablanca</p>
+                  <a href="spectacle-alice-chez-les-merveilles.html" class="vs-session__link">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#F8F8F8"></div>
+    <div class="vs-balls vs-balls--screen" data-balls-bottm="-6px" data-balls-color="#F8F8F8"></div>
+  </section>
+  <!-- Vs Session Time Area End -->
+
   <!-- User Type Selection Section -->
   <section class="user-type-selection" id="userTypeSection">
     <div class="container">
@@ -1448,8 +1654,8 @@
   </section>
 
   <!-- Vs Session Time Area -->
-  <section class="vs-session--area space space-extra-bottom bg-theme-color-1 z-index-common overflow-hidden">
-    <div class="vs-session--bg-image" data-vs-gsap-parallax-speed="5" data-vs-gsap-parallax-zoom>
+  <section class="vs-session--area space space-extra-bottom z-index-common overflow-hidden" style="background-color: #f8f9fa; background-image: url('assets/img/Asset 9@4x.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="vs-session--bg-image" data-vs-gsap-parallax-speed="5" data-vs-gsap-parallax-zoom style="display: none;">
       <img src="assets/img/Tara_Sur_La_Lune_Web_020.jpg" alt="Tara Sur La Lune">
     </div>
     <div class="vs-session--ele1" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
@@ -1460,8 +1666,8 @@
         <div class="col-lg-7 wow animate__fadeInUp" data-wow-delay="0.15s">
           <div class="vs-title text-center title-anime animation-style2">
             <div class="title-anime__wrap">
-              <span class="vs-title__sub text-white">Prochaines Séances</span>
-              <h2 class="vs-title__main text-white px-xl-5">Réservez Vos Places
+              <span class="vs-title__sub text-dark">Prochaines Séances</span>
+              <h2 class="vs-title__main text-dark px-xl-5">Réservez Vos Places
                 Maintenant</h2>
             </div>
           </div>
@@ -1573,137 +1779,6 @@
   </section>
   <!-- Vs Session Time Area End -->
 
-  <!-- Class -->
-  <section class="vs-class--area space-extra-top space-extra-bottom z-index-common overflow-hidden" style="background-image: url('assets/img/Asset 9@4x.png') !important; background-size: cover !important; background-position: center !important; background-repeat: no-repeat !important; background-color: #f8f9fa !important; position: relative;">
-    
-    <div class="container" style="position: relative; z-index: 2;">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <div class="vs-title text-center title-anime animation-style2">
-            <div class="title-anime__wrap">
-              <span class="vs-title__sub">Nos Spectacles</span>
-              <h2 class="vs-title__main">Découvrez Notre Répertoire</h2>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="z-index-common" style="position: relative; z-index: 2;">
-        <div class="vs-carousel vs-carousel--class swiper" data-xl="4" data-lg="3" data-autoplay="false" data-loop="true" data-autoplay-delay="6000" data-nav-next="#swiper-button-next" data-nav-prev="#swiper-button-prev">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.25s">
-              <div class="vs-class">
-                <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles.html">
-                    <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                    <div class="vs-class__icon--wrap">
-                      <span class="vs-class__icon vs-class__icon--color1">
-                      <img src="assets/img/icon L'École des jeunes spectateurs-11.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                    </span>
-                    </div>
-                  </a>
-                </div>
-                <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles.html">
-                    <h3 class="vs-class__heading">Charlotte</h3>
-                  </a>
-                  <p class="vs-class__text">
-                    Un spectacle émouvant qui explore les thèmes de l'amitié et de la découverte de soi.
-                  </p>
-                </div>
-                <div class="vs-class__bottom">
-                  <a href="spectacles.html" class="vs-class__link">
-                    <i class="fa-solid fa-arrow-right"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.45s">
-              <div class="vs-class">
-                <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles.html">
-                    <img class="vs-class__figure--img" src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                    <div class="vs-class__icon--wrap">
-                      <span class="vs-class__icon vs-class__icon--color2">
-                      <img src="assets/img/icon L'École des jeunes spectateurs-12.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                    </span>
-                    </div>
-                  </a>
-                </div>
-                <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles.html">
-                    <h3 class="vs-class__heading">Le Petit Prince</h3>
-                  </a>
-                  <p class="vs-class__text">
-                    L'histoire touchante du Petit Prince adaptée pour émerveiller petits et grands.
-                  </p>
-                </div>
-                <div class="vs-class__bottom">
-                  <a href="spectacles.html" class="vs-class__link">
-                    <i class="fa-solid fa-arrow-right"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.65s">
-              <div class="vs-class">
-                <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles.html">
-                    <img class="vs-class__figure--img" src="assets/img/spectacles/tara sur la lune.png" alt="Tara Sur La Lune" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                    <div class="vs-class__icon--wrap">
-                      <span class="vs-class__icon vs-class__icon--color3">
-                      <img src="assets/img/icon L'École des jeunes spectateurs-18.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                    </span>
-                    </div>
-                  </a>
-                </div>
-                <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles.html">
-                    <h3 class="vs-class__heading">Tara Sur La Lune</h3>
-                  </a>
-                  <p class="vs-class__text">
-                    Une aventure spatiale captivante qui stimule l'imagination et la curiosité des enfants.
-                  </p>
-                </div>
-                <div class="vs-class__bottom">
-                  <a href="spectacles.html" class="vs-class__link">
-                    <i class="fa-solid fa-arrow-right"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.85s">
-              <div class="vs-class">
-                <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles.html">
-                    <img class="vs-class__figure--img" src="assets/img/spectacles/l'eau la.png" alt="L'Eau-Là" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
-                    <div class="vs-class__icon--wrap">
-                      <span class="vs-class__icon vs-class__icon--color4">
-                      <img src="assets/img/icon L'École des jeunes spectateurs-19.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
-                    </span>
-                    </div>
-                  </a>
-                </div>
-                <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles.html">
-                    <h3 class="vs-class__heading">L'Eau-Là</h3>
-                  </a>
-                  <p class="vs-class__text">
-                    Une aventure aquatique qui sensibilise les enfants à l'importance de l'eau et de l'environnement.
-                  </p>
-                </div>
-                <div class="vs-class__bottom">
-                  <a href="spectacles.html" class="vs-class__link">
-                    <i class="fa-solid fa-arrow-right"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Class End -->
 
   <!-- JavaScript for User Type Selection and Filtering -->
   <script>
